<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">
<EditText
    android:id="@+id/et_input_time"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:hint="@string/enter_time_in_milliseconds"
    android:layout_height="wrap_content"
    android:inputType=""
    android:importantForAutofill="no" tools:targetApi="o"/>
    <Button
        android:id="@+id/btn_set_alarm"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_input_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"/>
    <Button
        android:id="@+id/btn_stop"
        android:layout_below="@id/btn_set_alarm"
        android:layout_width="match_parent"
        android:text="@string/stop"
        android:layout_height="wrap_content" />
</RelativeLayout>