<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedPreferenceActivity">
<TextView
    android:id="@+id/tv1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text"
    android:textSize="20sp"
    android:layout_marginTop="50dp"
    />
    <EditText
        android:id="@+id/et_shared_preference"
        android:hint="@string/enter_text"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="" tools:targetApi="o"/>
    <Button
        android:layout_below="@id/et_shared_preference"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_ok"
        android:text="@string/ok"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>