<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">
   <TextView
       android:text="@string/operation"
       android:textColor="@android:color/white"
       android:textSize="20sp"
       android:layout_marginTop="20dp"
       android:id="@+id/tv_operation"
       android:layout_centerHorizontal="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@android:color/black"
                android:id="@+id/linear_layout1"
                android:layout_width="wrap_content"

                android:layout_height="200dp"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_marginStart="5dp"
                    android:id="@+id/async_task"
                    android:background="@android:color/white"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/async_task"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:layout_marginStart="5dp"
                    android:id="@+id/content_provider"
                    android:layout_width="200dp"
                    android:background="@android:color/white"
                    android:layout_height="match_parent"
                    android:text="@string/content_provider"
                    style="?android:attr/buttonBarButtonStyle"
                    />
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/black"
                android:id="@+id/linear_layout2"
                android:layout_below="@id/linear_layout1"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_marginStart="5dp"
                    android:id="@+id/btn_database"
                    android:background="@android:color/white"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/database"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:layout_marginStart="5dp"
                    android:id="@+id/btn_alarm"
                    android:background="@android:color/white"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/alarm"
                    style="?android:attr/buttonBarButtonStyle"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_layout3"
                android:layout_below="@id/linear_layout2"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="200dp">
                <Button
                    android:layout_marginStart="5dp"
                    android:id="@+id/btn_shared_preference"
                    android:background="@android:color/white"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/shared_preference"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:layout_marginStart="5dp"
                    android:id="@+id/btn_animation"
                    android:background="@android:color/white"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/animation"
                    style="?android:attr/buttonBarButtonStyle"
                    />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>